--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ after_success:
   artifacts
 - mv artifacts/*.zip artifacts/distribution.zip && ls -al artifacts
 - "chmod 600 ${TRAVIS_BUILD_DIR}/ci-deploy-key"
-- "${TRAVIS_BUILD_DIR}/buildinfo_yml_builder.py ${TRAVIS_COMMIT} ${TRAVIS_BUILD_ID} ${TRAVIS_BUILD_NUMBER}"
-- "${TRAVIS_BUILD_DIR}/deploy.sh"
+- "${TRAVIS_BUILD_DIR}/build-helpers/buildinfo_yml_builder.py ${TRAVIS_COMMIT} ${TRAVIS_BUILD_ID} ${TRAVIS_BUILD_NUMBER}"
+- "${TRAVIS_BUILD_DIR}/build-helpers/deploy.sh"
 deploy:
   provider: s3
   access_key_id: AKIAJPTKESQQK3GFXN2Q
