VAL-235 Made policy configurable for bdoc & pdf, updated tests, use d4j configuration as a bean, validate policy against xsd

--- a/validation-services-parent/bdoc-validation-service/src/test/resources/application-test.yml
+++ b/validation-services-parent/bdoc-validation-service/src/test/resources/application-test.yml
@@ -1,7 +1,14 @@
-trusted:
-  list:
-    source:
-      lotlUrl: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
-      lotlCode: EU
-      scheduler:
-        cron: "0 0 3 * * ?"
+tsl:
+  loadFromCache: false
+  url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
+  code: EU
+  schedulerCron: "0 0 3 * * ?"
+
+keystore:
+  type: JKS
+  filename: test-siva-keystore.jks
+  password: siva-keystore-password
+
+siva:
+  bdoc:
+    policy: /bdoc_constraint.xml
