--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -25,6 +25,7 @@
         <dss.version>4.6.d4j.2</dss.version>
         <spring.boot.version>1.4.0.M3</spring.boot.version>
         <digidoc4j.version>1.0.3</digidoc4j.version>
+        <powermock.version>1.6.5</powermock.version>
     </properties>
 
     <dependencyManagement>
@@ -81,6 +82,17 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.16.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>${powermock.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito</artifactId>
+                <version>${powermock.version}</version>
             </dependency>
 
         </dependencies>
