--- a/siva-parent/siva-sample-application/pom.xml
+++ b/siva-parent/siva-sample-application/pom.xml
@@ -52,8 +52,14 @@
             <artifactId>bootstrap</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>dropzone</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.webjars.bower</groupId>
-            <artifactId>bootstrap-fileinput</artifactId>
+            <artifactId>highlightjs</artifactId>
+            <version>9.4.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
