--- a/siva-parent/siva-test/pom.xml
+++ b/siva-parent/siva-test/pom.xml
@@ -79,6 +79,17 @@
                     <value>false</value>
                 </property>
             </activation>
+            <properties>
+                <jmeter.host.name>localhost</jmeter.host.name>
+                <jmeter.host.port>8080</jmeter.host.port>
+                <jmeter.host.endpoint>/validate</jmeter.host.endpoint>
+                <jmeter.host.timeoutInMillis>60000</jmeter.host.timeoutInMillis>
+                <jmeter.thread.count>10</jmeter.thread.count>
+                <jmeter.thread.rampupPeriodInSecs>1</jmeter.thread.rampupPeriodInSecs>
+                <jmeter.test.durationInSecs>60</jmeter.test.durationInSecs>
+                <jmeter.testfiles.dir>${project.basedir}/src/test/jmeter/test-files</jmeter.testfiles.dir>
+                <jmeter.errors.dir>${project.build.directory}/jmeter/results/errors</jmeter.errors.dir>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -94,9 +105,51 @@
                                 </goals>
                                 <configuration>
                                     <testResultsTimestamp>false</testResultsTimestamp>
+                                    <propertiesUser>
+                                        <host.name>${jmeter.host.name}</host.name>
+                                        <host.port>${jmeter.host.port}</host.port>
+                                        <host.endpoint>${jmeter.host.endpoint}</host.endpoint>
+                                        <host.timeout>${jmeter.host.timeoutInMillis}</host.timeout>
+                                        <thread.count>${jmeter.thread.count}</thread.count>
+                                        <thread.rampup>${jmeter.thread.rampupPeriodInSecs}</thread.rampup>
+                                        <test.duration>${jmeter.test.durationInSecs}</test.duration>
+                                        <testfiles.dir>${jmeter.testfiles.dir}</testfiles.dir>
+                                        <errors.dir>${jmeter.errors.dir}</errors.dir>
+                                    </propertiesUser>
+                                    <jmeterPlugins>
+                                        <plugin>
+                                            <groupId>kg.apc</groupId>
+                                            <artifactId>jmeter-plugins-extras</artifactId>
+                                        </plugin>
+                                        <plugin>
+                                            <groupId>kg.apc</groupId>
+                                            <artifactId>jmeter-plugins-extras-libs</artifactId>
+                                        </plugin>
+                                        <plugin>
+                                            <groupId>kg.apc</groupId>
+                                            <artifactId>jmeter-plugins-standard</artifactId>
+                                        </plugin>
+                                    </jmeterPlugins>
                                 </configuration>
                             </execution>
                         </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>kg.apc</groupId>
+                                <artifactId>jmeter-plugins-extras</artifactId>
+                                <version>1.4.0</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>kg.apc</groupId>
+                                <artifactId>jmeter-plugins-extras-libs</artifactId>
+                                <version>1.4.0</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>kg.apc</groupId>
+                                <artifactId>jmeter-plugins-standard</artifactId>
+                                <version>1.4.0</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
 
                     <plugin>
@@ -111,7 +164,7 @@
                                     <goal>analyze</goal>
                                 </goals>
                                 <configuration>
-                                    <source>${project.build.directory}/**/*.jtl</source>
+                                    <source>${project.build.directory}/jmeter/results/*.jtl</source>
                                     <processAllFilesFound>true</processAllFilesFound>
                                     <targetDirectory>${project.build.directory}/jmeter/results/reports</targetDirectory>
                                     <writers>
