--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -112,10 +112,33 @@
                 <artifactId>jade4j</artifactId>
                 <version>1.2.1</version>
             </dependency>
+
+            <!-- Webjars -->
             <dependency>
                 <groupId>org.webjars.bower</groupId>
                 <artifactId>bootstrap</artifactId>
                 <version>4.0.0-alpha.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.webjars.bower</groupId>
+                        <artifactId>jquery</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>dropzone</artifactId>
+                <version>4.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars.bower</groupId>
+                <artifactId>highlightjs</artifactId>
+                <version>9.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars.bower</groupId>
+                <artifactId>jquery</artifactId>
+                <version>3.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars.bower</groupId>
