--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -86,6 +86,11 @@
             </dependency>
             <dependency>
                 <groupId>io.github.openeid.siva</groupId>
+                <artifactId>xroad-validation-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.openeid.siva</groupId>
                 <artifactId>tsl-loader</artifactId>
                 <version>${project.version}</version>
             </dependency>
