--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -60,6 +60,10 @@
             <groupId>io.github.openeid.siva</groupId>
             <artifactId>ddoc-validation-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openeid.siva</groupId>
+            <artifactId>xroad-validation-service</artifactId>
+        </dependency>
 
     </dependencies>
 
