VAL-177 Fixed Siva API service startup

--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -17,6 +17,7 @@
         <module>ddoc-validation-service</module>
         <module>xroad-validation-service</module>
         <module>tsl-loader</module>
+        <module>xroad-asice-verifier</module>
     </modules>
 
     <properties>
