--- a/validation-services-parent/xroad-validation-service/pom.xml
+++ b/validation-services-parent/xroad-validation-service/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <xroad.jar.base>${project.basedir}/src/main/resources/xroad-jars</xroad.jar.base>
+        <xroad.ext.base>${project.basedir}/ext-lib</xroad.ext.base>
         <xroad.orginal.jar>asicverifier-1.0.jar</xroad.orginal.jar>
         <xroad.output.file>asic-verifier-1.0-mod.jar</xroad.output.file>
     </properties>
@@ -24,18 +25,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.santuario</groupId>
-            <artifactId>xmlsec</artifactId>
-            <version>1.5.8</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.52</version>
-        </dependency>
-
-        <dependency>
             <groupId>io.github.openeid.siva</groupId>
             <artifactId>validation-commons</artifactId>
             <version>${project.version}</version>
@@ -44,64 +33,11 @@
         <dependency>
             <groupId>io.github.openeid.siva</groupId>
             <artifactId>xroad-asice-verifier</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${xroad.jar.base}/${xroad.output.file}</systemPath>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
+
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>repack</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <unzip src="${xroad.jar.base}/${xroad.orginal.jar}" dest="${project.build.directory}/tmp"/>
-
-                                <!-- Remove old modified JAR file -->
-                                <delete file="${xroad.jar.base}/${xroad.output.file}" />
-
-                                <!-- Delete all logging related content -->
-                                <delete dir="${project.build.directory}/tmp/org/slf4j" />
-                                <delete dir="${project.build.directory}/tmp/ch" />
-                                <delete file="${project.build.directory}/tmp/logback.xml" />
-
-                                <!-- Remove meta info about logging -->
-                                <delete dir="${project.build.directory}/tmp/META-INF/maven/ch.qos.logback" />
-                                <delete dir="${project.build.directory}/tmp/META-INF/maven/org.slf4j" />
-
-                                <!-- Remove Bouncy Castle from fat JAR -->
-                                <delete dir="${project.build.directory}/tmp/org/bouncycastle" />
-
-                                <!-- Remove Apache XML security from fat JAR -->
-                                <delete dir="${project.build.directory}/tmp/org/apache/xml/security" />
-
-                                <zip basedir="${project.build.directory}/tmp" update="true" destfile="${xroad.jar.base}/${xroad.output.file}"/>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
