--- a/validation-services-parent/xroad-validation-service/pom.xml
+++ b/validation-services-parent/xroad-validation-service/pom.xml
@@ -11,12 +11,6 @@
 
     <artifactId>xroad-validation-service</artifactId>
 
-    <properties>
-        <xroad.jar.base>${project.basedir}/src/main/resources/xroad-jars</xroad.jar.base>
-        <xroad.ext.base>${project.basedir}/src/main/resources/ext-lib</xroad.ext.base>
-        <xroad.orginal.jar>asicverifier-1.0.jar</xroad.orginal.jar>
-        <xroad.output.file>asic-verifier-1.0-mod.jar</xroad.output.file>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -49,71 +43,88 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>repack</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <unzip src="${xroad.ext.base}/${xroad.orginal.jar}" dest="${project.build.directory}/tmp"/>
+    <profiles>
+        <profile>
+            <id>update-asice-verifier</id>
+            <activation>
+                <property>
+                    <name>updateAsiceVerifier</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <xroad.jar.base>${project.basedir}/src/main/resources/xroad-jars</xroad.jar.base>
+                <xroad.ext.base>${project.basedir}/src/main/resources/ext-lib</xroad.ext.base>
+                <xroad.orginal.jar>asicverifier-1.0.jar</xroad.orginal.jar>
+                <xroad.output.file>asic-verifier-1.0-mod.jar</xroad.output.file>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <id>repack</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <unzip src="${xroad.ext.base}/${xroad.orginal.jar}" dest="${project.build.directory}/tmp"/>
 
-                                <!-- Remove old modified JAR file -->
-                                <delete file="${xroad.jar.base}/${xroad.output.file}" />
+                                        <!-- Remove old modified JAR file -->
+                                        <delete file="${xroad.jar.base}/${xroad.output.file}" />
 
-                                <!-- Delete all logging related content -->
-                                <delete dir="${project.build.directory}/tmp/org/slf4j" />
-                                <delete dir="${project.build.directory}/tmp/ch" />
-                                <delete file="${project.build.directory}/tmp/logback.xml" />
+                                        <!-- Delete all logging related content -->
+                                        <delete dir="${project.build.directory}/tmp/org/slf4j" />
+                                        <delete dir="${project.build.directory}/tmp/ch" />
+                                        <delete file="${project.build.directory}/tmp/logback.xml" />
 
-                                <!-- Remove meta info about logging -->
-                                <delete dir="${project.build.directory}/tmp/META-INF/maven/ch.qos.logback" />
-                                <delete dir="${project.build.directory}/tmp/META-INF/maven/org.slf4j" />
+                                        <!-- Remove meta info about logging -->
+                                        <delete dir="${project.build.directory}/tmp/META-INF/maven/ch.qos.logback" />
+                                        <delete dir="${project.build.directory}/tmp/META-INF/maven/org.slf4j" />
 
-                                <!-- Remove Bouncy Castle from fat JAR -->
-                                <delete dir="${project.build.directory}/tmp/org/bouncycastle" />
+                                        <!-- Remove Bouncy Castle from fat JAR -->
+                                        <delete dir="${project.build.directory}/tmp/org/bouncycastle" />
 
-                                <!-- Remove Apache XML security from fat JAR -->
-                                <delete dir="${project.build.directory}/tmp/org/apache/xml/security" />
+                                        <!-- Remove Apache XML security from fat JAR -->
+                                        <delete dir="${project.build.directory}/tmp/org/apache/xml/security" />
 
-                                <zip basedir="${project.build.directory}/tmp" update="true" destfile="${xroad.jar.base}/${xroad.output.file}"/>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.2</version>
-                <executions>
-                    <execution>
-                        <id>install-jar</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <groupId>${project.groupId}</groupId>
-                            <artifactId>xroad-asice-verifier</artifactId>
-                            <version>1.0</version>
-                            <localRepositoryPath>${basedir}/external-lib-repository</localRepositoryPath>
-                            <packaging>jar</packaging>
-                            <file>${xroad.jar.base}/${xroad.output.file}</file>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+                                        <zip basedir="${project.build.directory}/tmp" update="true" destfile="${xroad.jar.base}/${xroad.output.file}"/>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-install-plugin</artifactId>
+                        <version>2.5.2</version>
+                        <executions>
+                            <execution>
+                                <id>install-jar</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>install-file</goal>
+                                </goals>
+                                <configuration>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>xroad-asice-verifier</artifactId>
+                                    <version>1.0</version>
+                                    <localRepositoryPath>${basedir}/external-lib-repository</localRepositoryPath>
+                                    <packaging>jar</packaging>
+                                    <file>${xroad.jar.base}/${xroad.output.file}</file>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <repositories>
         <repository>
