--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ addons:
       - python3
       - python3-dev
       - python3-setuptools
+      - unzip
 before_install:
 - openssl aes-256-cbc -K $encrypted_befc5bd7f29f_key -iv $encrypted_befc5bd7f29f_iv
   -in ci-deploy-key.enc -out ci-deploy-key -d
 - export TZ=Estonia/Tallinn
 - easy_install3 --user pyyaml
 - easy_install3 --user requests
+- cp ${TRAVIS_BUILD_DIR}build-helpers/dss-cache-tsl.zip ${TMPDIR} && unzip ${TMPDIR}/dss-cache-tsl.zip -d $TMPDIR
 branchespython-dev:
   only:
   - develop
