--- a/validation-services-parent/pdf-validation-service/src/test/resources/application-test.yml
+++ b/validation-services-parent/pdf-validation-service/src/test/resources/application-test.yml
@@ -1,6 +1,6 @@
 tsl:
   loader:
-    loadFromCache: false
+    loadFromCache: true
     url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
     code: EU
     schedulerCron: "0 0 3 * * ?"
