VAL-277 Support multiple signature policies. Validation's signature policy can be chosen with request parameter.

--- a/validation-services-parent/bdoc-validation-service/src/main/resources/application-test.yml
+++ b/validation-services-parent/bdoc-validation-service/src/main/resources/application-test.yml
@@ -1,4 +1,7 @@
 siva:
   bdoc:
-    policy: /bdoc_constraint.xml
+    signaturePolicy:
+      policies:
+        EE: bdoc_constraint.xml
+      defaultPolicy: EE
 
