--- a/validation-services-parent/bdoc-validation-service/src/test/resources/application-test.yml
+++ b/validation-services-parent/bdoc-validation-service/src/test/resources/application-test.yml
@@ -11,4 +11,7 @@ keystore:
 
 siva:
   bdoc:
-    policy: /bdoc_constraint.xml
+    signaturePolicy:
+      policies:
+        EE: bdoc_constraint.xml
+      defaultPolicy: EE
