--- a/validation-services-parent/pdf-validation-service/src/main/resources/application.yml
+++ b/validation-services-parent/pdf-validation-service/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 siva:
   pdf:
-    policy: /pdf_constraint.xml
+    signaturePolicy:
+      policies:
+        EE: pdf_constraint.xml
+      defaultPolicy: EE
