--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -4,4 +4,5 @@ validation.error.message.base64 = not valid base64 encoded string
 validation.error.message.documentType = invalid document type
 validation.error.message.reportType = invalid report type
 validation.error.message.filename = invalid filename
+validation.error.message.signaturePolicy = invalid signature policy
 validation.error.message.general = invalid value
