--- a/validation-services-parent/bdoc-validation-service/src/main/resources/application-default.yml
+++ b/validation-services-parent/bdoc-validation-service/src/main/resources/application-default.yml
@@ -1,3 +1,6 @@
 siva:
   bdoc:
-    policy: /bdoc_constraint.xml
+    signaturePolicy:
+      policies:
+        EE: bdoc_constraint.xml
+      defaultPolicy: EE
