--- a/validation-services-parent/bdoc-validation-service/src/test/resources/application-test.yml
+++ b/validation-services-parent/bdoc-validation-service/src/test/resources/application-test.yml
@@ -1,5 +1,5 @@
 tsl:
-  loadFromCache: true
+  loadFromCache: false
   url: https://ec.europa.eu/information_society/policy/esignature/trusted-list/tl-mp.xml
   code: EU
   schedulerCron: "0 0 3 * * ?"
