--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -23,7 +23,7 @@
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
         <dss.version>4.6.d4j.2</dss.version>
-        <spring.boot.version>1.4.0.M3</spring.boot.version>
+        <spring.boot.version>1.4.0.RC1</spring.boot.version>
         <digidoc4j.version>1.0.3</digidoc4j.version>
         <powermock.version>1.6.5</powermock.version>
     </properties>
