MAINTENANCE: Default policy is now defined as filename

--- a/validation-services-parent/bdoc-validation-service/src/main/resources/application-default.yml
+++ b/validation-services-parent/bdoc-validation-service/src/main/resources/application-default.yml
@@ -2,5 +2,6 @@ siva:
   bdoc:
     signaturePolicy:
       policies:
-        EE: bdoc_constraint.xml
-      defaultPolicy: EE
+        ? EE
+        : bdoc_constraint.xml
+      defaultPolicy: bdoc_constraint.xml
