--- a/validation-services-parent/pdf-validation-service/src/main/resources/application-test.yaml
+++ b/validation-services-parent/pdf-validation-service/src/main/resources/application-test.yaml
@@ -2,6 +2,8 @@ siva:
   pdf:
     signaturePolicy:
       policies:
-        EE: pdf_constraint.xml
-        EU: pdf_constraint2.xml
-      defaultPolicy: EE
+        ? EE
+        : pdf_constraint.xml
+        ? EU
+        : pdf_constraint2.xml
+      defaultPolicy: pdf_constraint.xml
