MAINTENANCE: Changed system testing process

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,9 @@ branchespython-dev:
 install: true
 script:
 - "./mvnw clean install -q"
-- "${TRAVIS_BUILD_DIR}/build-helpers/system-test.sh"
+- "${TRAVIS_BUILD_DIR}/build-helpers/system-test-prepare.sh"
+- "pyresttest http://demoapps.eu:7000 ${TRAVIS_BUILD_DIR}build-helpers/system-test.yml"
+- "${TRAVIS_BUILD_DIR}/build-helpers/stage-deploy-cleanup.sh"
 after_success:
 - "./mvnw jacoco:report coveralls:report -q -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
 - "${TRAVIS_BUILD_DIR}/build-helpers/buildinfo_yml_builder.py ${TRAVIS_COMMIT} ${TRAVIS_BUILD_ID} ${TRAVIS_BUILD_NUMBER}"
