--- a/siva-parent/siva-sample-application/pom.xml
+++ b/siva-parent/siva-sample-application/pom.xml
@@ -22,6 +22,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- RxJava -->
+        <dependency>
+            <groupId>io.jmnarloch</groupId>
+            <artifactId>rxjava-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+        </dependency>
+
         <!--Monitoring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
