--- a/validation-services-parent/ddoc-validation-service/pom.xml
+++ b/validation-services-parent/ddoc-validation-service/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>cryptacular</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
